# auto-dodge

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: build.yml
src/: Hazards.hpp  Physics.hpp  Trajectory.hpp  main.cpp
